--- a/resources/styles/_list.scss
+++ b/resources/styles/_list.scss
@@ -58,6 +58,7 @@
       padding: 25px 0 0 40px;
       width: 1066px;
       height: 130px * 4;
+      overflow: scroll;
       background: rgba(255,255,255,0.35);
 
       .item {
